csrc/tests/codegen_probes/errors/err_default_array_arg.bas
' REJECT: an array parameter with a default value.
' symboltable:641 syntax_error_cannot_define_default_array_argument.
Sub s(a() As Byte = 1)
End Sub
